--- a/templates/community/base.html
+++ b/templates/community/base.html
@@ -83,6 +83,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'register_government' %}">Sign Up as an Official</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'register_staff' %}">Sign Up as a Staff Member</a>
+                        </li>
                         {% endif %}
                     </ul>
                 </div>
