--- a/templates/community/home.html
+++ b/templates/community/home.html
@@ -173,13 +173,13 @@
     </div>
 
     </div>
-    {% if public_users %}
+    {% if request.user.is_authenticated and request.user.profile.role == 'STAFF' %}
     <div class="scrollable-section mt-5 border-0 rounded">
         <h3>Public Users</h3>
         <ul>
             {% for user_profile in public_users %}
             <li class="user-item" data-user-id="{{ user_profile.user.id }}">
-                <a href="{% url 'community:issue-credit' user_id=user_profile.user.id %}">
+                <a href="{% url 'issue_credit' %}?user_id={{ user_profile.user.id }}">
                     Username: {{ user_profile.user.username }}, Balance: £{{ user_profile.balance }}
                 </a>
             </li>
