--- a/templates/community/booking.html
+++ b/templates/community/booking.html
@@ -100,7 +100,7 @@
                                                 {% if event.author.role == 'INSTRUCTOR' %} £ 7.00
                                                 {% else  %} £0.00
                                                 {% endif %}
-                                                </p> <!-- Placeholder for event cost -->
+                                                <!-- Placeholder for event cost -->
                                                 <!-- Inside your event loop in the template -->
                                                 <button class="btn btn-info like-btn"
                                                     data-event-id="{{ event.id }}">Like</button>
