--- a/templates/community/home.html
+++ b/templates/community/home.html
@@ -2,13 +2,9 @@
 {% load static %}
 
 {% block content %}
-
-
-
 <main id="main-background" class="pt-5 ">
 
     <div class="col-12 row   d-flex justify-content-center align-items-center pb-3 border-0 rounded m-1">
-
         <!-- Title and user-specific greeting -->
         <div class="col-8 container mt-4 d-flex d-md-none justify-content-center ">
             <h1 class="h1 text-center"> Welcome to <br> the Community <br> Center</h1>
@@ -16,13 +12,10 @@
         <div class="col-8 container mt-4 d-flex d-md-none justify-content-center ">
             <h3 class="h3 leading ">
                 <!-- Check if user is authenticated -->
-
-
                 Hi , {{ user.profile }}
                 <!-- Display 'Create an Event' option for certain user roles -->
             </h3>
         </div>
-
         <div class="col-8 container mt-4 d-none  d-md-flex justify-content-center ">
             <h1 class="h1 text-center"> Welcome to the Community Center</h1>
         </div>
@@ -30,33 +23,24 @@
         <div class="col-8 container mt-4 d-none  d-md-flex justify-content-center ">
             <h3 class="h3 leading ">
                 <!-- Check if user is authenticated -->
-
-
                 Hi , {{ user.profile }}
                 <!-- Display 'Create an Event' option for certain user roles -->
             </h3>
-
         </div>
         {% endif %}
-
-
-
     </div>
-    
     <div class="row d-flex d-md-none justify-content-center align-items-center ">
         <!-- Section displaying event categories and a carousel of event images -->
         <div class="d-none  col-md-3 event-info">
             <h3 class="text-center">Types of Events</h3>
             <p class="text-center ">Maths Tutoring: Enhance your skills with expert tutors.Yoga for Wellness:
                 Stretch and strengthen your body.
-                Chess Championship: Showcase your strategic prowess.
+                Chess Championship: Showcase your strategic prowess. </p>
                 <p> And more .... </p>
         </div>
         <div class="col-11  h-75">
-
             <div class="banner-container">
                 <div id="bannerCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000">
-
                     <div class="carousel-item active">
                         <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521728/pexels-katerina-holmes-5905456_zkqiwh.jpg"
                             class="d-block w-100" data-bs-event="maths-tutor" alt=" Maths Tutoring Event">
@@ -70,22 +54,18 @@
                         <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521726/pexels-alex-green-5692696_rlmgle.jpg"
                             class="d-block w-100" data-bs-event="chess" alt=" Chess Event">
                     </div>
-
                     <div class="carousel-item">
                         <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521724/pexels-%E7%A5%9D-%E9%B9%A4%E6%A7%90-716276_avkbnm.jpg"
                             class="d-block w-100" data-bs-event="gallery" alt=" Gallery  Event">
                     </div>
-
                     <div class="carousel-item">
                         <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521723/pexels-budgeron-bach-5149649_soauqj.jpg"
                             class="d-block w-100" data-bs-event="dance" alt=" Dancing event">
                     </div>
-
                     <div class="carousel-item">
                         <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521718/pexels-orkhan-shahbaz-18751164_vuz7uu.jpg"
                             class="d-block w-100" data-bs-event="politic" alt=" Political  Event">
                     </div>
-
                     <div class="carousel-item">
                         <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521641/first-aid_mf3tfy.png"
                             class="d-block w-100" data-bs-event="firstaid" alt=" First Aid  Event">
@@ -95,7 +75,6 @@
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-
                     <button class="carousel-control-next standard opacity-0.05 " id="carousel-button" type="button"
                         data-bs-target="#bannerCarousel" data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -105,10 +84,6 @@
             </div>
         </div>
     </div>
-
-
-
-    
     <div class="d-none row  pb-4 d-md-flex justify-content-around">
         <!-- Section displaying event categories and a carousel of event images -->
         <div class=" col-md-5 col-lg-4  ms-3 ps-2 event-info bg-light border-0 rounded">
@@ -119,10 +94,8 @@
                 <br> And more ..... </p>
         </div>
         <div class=" col-md-6 h-75">
-
             <div class="banner-container">
                 <div id="bannerCarousel1" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000">
-
                     <div class="carousel-item active">
                         <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521728/pexels-katerina-holmes-5905456_zkqiwh.jpg"
                             class="d-block w-100" data-bs-event="maths-tutor" alt=" Maths Tutoring Event">
@@ -131,27 +104,22 @@
                         <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521726/pexels-yan-krukau-8436587_r5ahji.jpg"
                             class="d-block w-100" data-bs-event="yoga" alt=" Yoga Event">
                     </div>
-
                     <div class="carousel-item">
                         <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521726/pexels-alex-green-5692696_rlmgle.jpg"
                             class="d-block w-100" data-bs-event="chess" alt=" Chess Event">
                     </div>
-
                     <div class="carousel-item">
                         <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521724/pexels-%E7%A5%9D-%E9%B9%A4%E6%A7%90-716276_avkbnm.jpg"
                             class="d-block w-100" data-bs-event="gallery" alt=" Gallery  Event">
                     </div>
-
                     <div class="carousel-item">
                         <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521723/pexels-budgeron-bach-5149649_soauqj.jpg"
                             class="d-block w-100" data-bs-event="dance" alt=" Dancing event">
                     </div>
-
                     <div class="carousel-item">
                         <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521718/pexels-orkhan-shahbaz-18751164_vuz7uu.jpg"
                             class="d-block w-100" data-bs-event="politic" alt=" Political  Event">
                     </div>
-
                     <div class="carousel-item">
                         <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521641/first-aid_mf3tfy.png"
                             class="d-block w-100" data-bs-event="firstaid" alt=" First Aid  Event">
@@ -161,7 +129,6 @@
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-
                     <button class="carousel-control-next standard opacity-0.05 " id="carousel-button" type="button"
                         data-bs-target="#bannerCarousel1" data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -170,8 +137,6 @@
                 </div>
             </div>
         </div>
-    </div>
-
     </div>
     {% if request.user.is_authenticated and request.user.profile.role == 'STAFF' %}
     <div class="scrollable-section mt-5 border-0 rounded">
@@ -189,13 +154,10 @@
     <div class="mt-5 border-0 rounded">
         <h1> Coming Soon with next update </h1>
         <div class="d-none d-md-inline-block col-8">
-            
             <canvas id="eventGraph" width='300' height="150"></canvas>
         </div>
     </div>
     {% endif %}
-
-
     {% if created_events %}
     <!-- ... Content for displaying created events ... -->
     <div class="container mt-5 carousel-inner border-0 rounded">
@@ -208,8 +170,6 @@
             {% for event in created_events %}
             <div class="col-md-4 mb-3 ">
                 <div class="card bg-light  card-opacity border-0 justify-content-center align-items-center">
-
-
                     <strong>{{ event.title }}</strong>
                     {% if event.image %}
                     <img src="{{ event.image.url }}" alt="Event Image">
@@ -222,7 +182,6 @@
                         {% else %}
                         0.00
                         {% endif %} </p>
-
                     <button type="button" class="btn btn-secondary btn-sm mb-2" data-bs-toggle="modal"
                         data-bs-target="#eventModal{{ event.id }}">Read More</button>
                     <div class="modal fade" id="eventModal{{ event.id }}" tabindex="-1"
@@ -238,11 +197,7 @@
                                     <span> Event by {{ event.author.user.username }} <br> </span>
                                     <p> {{ event.description }} </p> <!-- Display event description -->
                                     <p>Date: {{ event.date }}</p> <!-- Display event date -->
-
-
-
                                 </div>
-
                             </div>
                         </div>
                     </div>
@@ -272,13 +227,10 @@
             {% endfor %}
         </div>
         {% else %}
-
         {% endif %}
     </div>
-    
     <!-- ... Content for displaying joined events ... -->
     {% if user.is_authenticated and joined_events %}
-
     <div class="container mt-5 carousel-inner border-0 rounded">
         <div class="row ">
             <div class="col-12 d-flex text-center justify-content-center">
@@ -309,9 +261,6 @@
                                         <span> Event by {{ event.author.user.username }} <br> </span>
                                         <p> {{ event.description }} </p> <!-- Display event description -->
                                         <p>Date: {{ event.date }}</p> <!-- Display event date -->
-
-
-
                                     </div>
                                 </div>
                             </div>
@@ -320,10 +269,8 @@
                 </div>
             </div>
             {% endfor %}
-
         </div>
         {% else %}
-
         {% endif %}
     </div> <!-- ... Content for displaying user's balance and recent transactions ... -->
     {% if user.is_authenticated %}
@@ -331,7 +278,6 @@
     <div class="container mt-5 mb-3 pb-4 ">
         <div class="row align-items-start carousel-inner border-0 rounded m-1">
             <div class="col-8 col-md-4">
-
                 <h3> Your Balance: {{ user.profile.balance }}</h3>
                 <h4> Recent Transactions </h4>
                 <ul class="budget-list">
@@ -343,21 +289,14 @@
                     <li class="budget-list"> No recent transactions.</li>
                     {% endfor %}
                 </ul>
-
             </div>
-
             <div class="d-none d-md-inline-block col-8">
                 <canvas id="transactionGraph" width='300' height="150"></canvas>
             </div>
-
         </div>
     </div>
     {% endif %}
-    
-    
-
     {% if user.profile.role == 'GOVERNMENT' %}
-   
     <div class="row align-items-center justify-content-center border-0 rounded m-1">
         <div class="col-12 col-md-8 col-lg-6">
             <h2 class="text-center">Event Participation Overview</h2>
@@ -366,7 +305,6 @@
             </div>
         </div>
     </div>
-    
     {% endif %}
     {% endif %}
 </main><!-- ... Script for initializing the chart ... -->
@@ -459,15 +397,15 @@
             });
         }
     });
-
 </script>
 <script>
-document.querySelectorAll('.user-item').forEach(item => {
-    item.addEventListener('click', function() {
-        const userId = this.getAttribute('data-user-id');
-        window.location.href = `/community/issue-credit/?user_id=${userId}`; // Update the URL path here
+    document.querySelectorAll('.user-item').forEach(item => {
+        item.addEventListener('click', function () {
+            const userId = this.getAttribute('data-user-id');
+            window.location.href =
+            `/community/issue-credit/?user_id=${userId}`; // Update the URL path here
+        });
     });
-});
 </script>
 
 <script>
@@ -476,13 +414,16 @@ document.querySelectorAll('.user-item').forEach(item => {
         let governmentEventDates = JSON.parse('{{ government_event_dates|safe }}' || '[]');
         let combinedEventDates = JSON.parse('{{ combined_event_dates|safe }}' || '[]');
 
-        let instructorEventAmounts = JSON.parse('{{ instructor_event_amounts|safe }}' || '[]').map((val, i, arr) => arr.slice(0, i + 1).reduce((a, b) => a + b, 0));
-        let governmentEventAmounts = JSON.parse('{{ government_event_amounts|safe }}' || '[]').map((val, i, arr) => arr.slice(0, i + 1).reduce((a, b) => a + b, 0));
-        let combinedEventAmounts = instructorEventAmounts.map((val, index) => val + (governmentEventAmounts[index] || 0));
-        
+        let instructorEventAmounts = JSON.parse('{{ instructor_event_amounts|safe }}' || '[]').map((val, i,
+            arr) => arr.slice(0, i + 1).reduce((a, b) => a + b, 0));
+        let governmentEventAmounts = JSON.parse('{{ government_event_amounts|safe }}' || '[]').map((val, i,
+            arr) => arr.slice(0, i + 1).reduce((a, b) => a + b, 0));
+        let combinedEventAmounts = instructorEventAmounts.map((val, index) => val + (governmentEventAmounts[
+            index] || 0));
+
         const totalInstructorEvents = instructorEventAmounts.reduce((a, b) => a + b, 0);
         const totalGovernmentEvents = governmentEventAmounts.reduce((a, b) => a + b, 0);
-        
+
         const eventGraphCanvas = document.getElementById('eventGraph');
         if (eventGraphCanvas) {
             const ctx = eventGraphCanvas.getContext('2d');
@@ -490,8 +431,7 @@ document.querySelectorAll('.user-item').forEach(item => {
                 type: 'line',
                 data: {
                     labels: combinedEventDates,
-                    datasets: [
-                        {
+                    datasets: [{
                             label: 'Instructor Events (£200 each)',
                             data: instructorEventAmounts,
                             backgroundColor: 'rgba(255,99,132,0.2)',
