Add visually hidden class and alt atribute

--- a/templates/community/base.html
+++ b/templates/community/base.html
@@ -93,18 +93,12 @@
             </nav>
         </div>
     </header>
-
     {% block content %}
-
-
-
     <!-- Place for page content -->
     {% endblock content %}
     <!-- Footer content with copyright notice and social media links -->
     <!-- ... Footer content ... -->
-
-
-    <!-- Footer Section -->
+   <!-- Footer Section -->
     <footer class="footer bg-light m-0 ">
         <div class="container pt-3 pb-2">
             <!-- Flex container for aligning footer content -->
@@ -114,31 +108,34 @@
                     <span class="text-muted"> &copy; 2023 Jesse Ross</span>
                 </div>
                 <!-- Spacer Div: Adjusts space on larger screens -->
-
                 <!-- Social Media Links: Visible only on md screens and above -->
                 <div class="d-none d-md-flex  col-6  mt-1 justify-content-end ">
                     <!-- Twitter Link -->
                     <div class="col-1">
                         <a href="https://twitter.com" target="_blank" class="text-muted me-2">
                             <i class="fab fa-twitter"></i>
+                            <span class="visually-hidden">Follow us on Twitter</span>
                         </a>
                     </div>
                     <!-- Instagram Link -->
                     <div class="col-1">
                         <a href="https://instagram.com" target="_blank" class="text-muted me-2">
                             <i class="fab fa-instagram"></i>
+                            <span class="visually-hidden">Follow us on Instagram</span>
                         </a>
                     </div>
                     <!-- Facebook Link -->
                     <div class="col-1">
                         <a href="https://facebook.com" target="_blank" class="text-dark me-2">
                             <i class="fab fa-facebook-f"></i>
+                            <span class="visually-hidden">Follow us on Facebook</span>
                         </a>
                     </div>
                     <!-- TikTok Link -->
                     <div class="col-1">
                         <a href="https://tiktok.com" target="_blank" class="text-dark me-2">
                             <i class="fab fa-tiktok"></i>
+                            <span class="visually-hidden">Follow us on TikTok</span>
                         </a>
                     </div>
                 </div>
@@ -149,20 +146,20 @@
 
                     <a href="https://twitter.com" target="_blank" class="text-muted m-2">
                         <i class="fab fa-twitter"></i>
+                        <span class="visually-hidden">Follow us on Twitter</span>
                     </a>
-
                     <a href="https://instagram.com" target="_blank" class="text-muted m-2">
                         <i class="fab fa-instagram"></i>
+                        <span class="visually-hidden">Follow us on Instagram</span>
                     </a>
-
                     <a href="https://facebook.com" target="_blank" class="text-muted m-2">
                         <i class="fab fa-facebook-f"></i>
+                        <span class="visually-hidden">Follow us on Facebook</span>
                     </a>
-
                     <a href="https://tiktok.com" target="_blank" class="text-muted m-2">
                         <i class="fab fa-tiktok"></i>
+                        <span class="visually-hidden">Follow us on TikTok</span>
                     </a>
-
                 </div>
                 <!-- spacing small screen div -->
                 <div class="col-3 d-md-none"></div>
@@ -181,5 +178,4 @@
     </script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
