fix background main error issue

--- a/templates/community/base.html
+++ b/templates/community/base.html
@@ -93,9 +93,11 @@
             </nav>
         </div>
     </header>
+    <main id="main-background">
     {% block content %}
     <!-- Place for page content -->
     {% endblock content %}
+</main>
     <!-- Footer content with copyright notice and social media links -->
     <!-- ... Footer content ... -->
    <!-- Footer Section -->
