--- a/templates/community/home.html
+++ b/templates/community/home.html
@@ -2,8 +2,6 @@
 {% load static %}
 
 {% block content %}
-<main id="main-background" class="pt-5 ">
-
     <div class="col-12 row   d-flex justify-content-center align-items-center pb-3 border-0 rounded m-1">
         <!-- Title and user-specific greeting -->
         <div class="col-8 container mt-4 d-flex d-md-none justify-content-center ">
@@ -307,7 +305,7 @@
     </div>
     {% endif %}
     {% endif %}
-</main><!-- ... Script for initializing the chart ... -->
+<!-- ... Script for initializing the chart ... -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <!-- JavaScript for Chart.js to display transaction history graphically -->
 <script>
