--- a/templates/community/about.html
+++ b/templates/community/about.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %} About - {{block.super}}{% endblock title %}
 <!-- Sets the title of the About page, appending to the base title -->
-{% block content %}<main id="main-background">
+{% block content %}
   <div class="container mt-4 ">
     <div class="row">
       <div class="col-12 carousel-inner mt-3 pt-3 border-none rounded">
@@ -210,7 +210,7 @@
       </div>
     </div>
   </div>
-</main>
+
 <script>
   document.querySelector('.main-button').addEventListener('click', function () {
     var shareContainer = document.getElementById('shareButtonContainer');
