--- a/templates/community/booking.html
+++ b/templates/community/booking.html
@@ -38,7 +38,7 @@
                         <!-- Check if there is an event in this time slot -->
 
                         <!-- Conditional styling based on event author's role -->
-                        <div id="main-background" class=" p-2 mt-2 mb-2 border-none rounded text-center ">
+                        <div  class=" p-2 mt-2 mb-2 border-none rounded text-center ">
                             <div class="pt-2 bg-light ">
                                 <h5
                                     class="mb-1 {% if event.author.role == 'INSTRUCTOR' %} text-warning {% else %} text-primary {% endif %} ">
