improve id on carousel buttons for accessibility

--- a/templates/community/home.html
+++ b/templates/community/home.html
@@ -68,12 +68,12 @@
                         <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521641/first-aid_mf3tfy.png"
                             class="d-block w-100" data-bs-event="firstaid" alt=" First Aid  Event">
                     </div>
-                    <button class="carousel-control-prev  standard opacity-0.05" id="carousel-button" type="button"
+                    <button class="carousel-control-prev  standard opacity-0.05" id="carousel-button-next" type="button"
                         data-bs-target="#bannerCarousel" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next standard opacity-0.05 " id="carousel-button" type="button"
+                    <button class="carousel-control-next standard opacity-0.05 " id="carousel-button-previous" type="button"
                         data-bs-target="#bannerCarousel" data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
@@ -122,12 +122,12 @@
                         <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521641/first-aid_mf3tfy.png"
                             class="d-block w-100" data-bs-event="firstaid" alt=" First Aid  Event">
                     </div>
-                    <button class="carousel-control-prev  standard opacity-0.05" id="carousel-button" type="button"
+                    <button class="carousel-control-prev  standard opacity-0.05" id="carousel-button-next1" type="button"
                         data-bs-target="#bannerCarousel1" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next standard opacity-0.05 " id="carousel-button" type="button"
+                    <button class="carousel-control-next standard opacity-0.05 " id="carousel-button-previous1" type="button"
                         data-bs-target="#bannerCarousel1" data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
