--- a/templates/community/about.html
+++ b/templates/community/about.html
@@ -67,12 +67,12 @@
                   </div>
                 </div>
                 <button class="carousel-control-prev standard opacity-0.05" type="button"
-                  data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                  data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" id="carousel-button-previous2">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
                 <button class="carousel-control-next standard opacity-0.05 " type="button"
-                  data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                  data-bs-target="#carouselExampleCaptions" id="carousel-button-next-2" data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
