--- a/templates/community/events/update_event.html
+++ b/templates/community/events/update_event.html
@@ -12,6 +12,10 @@
         <form method="post" enctype="multipart/form-data" class="col-12">
             {% csrf_token %}
             {{ form|crispy }}  <!-- Renders the form fields with crispy forms styling -->
+            <label for="id_course_type">Course Type:</label>
+            {{ form.course_type }}
+            <label for="id_tags">Tags:</label>
+            {{ form.tags }}
             <button type="submit" class="mt-3 standard"> Update Event </button> <!-- Button to submit the form and update the event -->
         </form>
     </div>
