--- a/templates/community/events/create_event.html
+++ b/templates/community/events/create_event.html
@@ -20,10 +20,17 @@
         <form method="post" enctype="multipart/form-data" class="col-12">
             {% csrf_token %}
             {{ form|crispy }}
-            <label for="id_course_type">Course Type:</label>
-    {{ form.course_type }}
-    <label for="id_tags">Tags:</label>
-    {{ form.tags }}
+            <div class="form-group">
+                {{ form.tags.label_tag }}
+                {% for checkbox in form.tags %}
+                    <div class="checkbox">
+                        <label>
+                            {{ checkbox.choice_label }}
+                            {{ checkbox.tag }}
+                        </label>
+                    </div>
+                {% endfor %}
+            </div>
             <button type="submit" class="mt-3 standard"> Create Event </button>
         </form>
     </div>
