Fix credit logic for creditform

--- a/templates/community/search_events.html
+++ b/templates/community/search_events.html
@@ -22,7 +22,7 @@
                     <p>{{ event.description }}</p>
                     <p>Start Time: {{ event_detail.event.time }}</p>
                     <p>Capacity: {{ event_detail.event.capacity }}</p>
-                    <p>Cost: {% if event_detail.cost == 0.00 %} Free {% else %} £{{ event_detail.cost }} {% endif %}</p>
+                    <p>Cost: {% if event_detail.cost == 0.00 %} Free {% else %} £{{ event_detail.cost }}0 {% endif %}</p>
                     <p>Tags: {{ event_detail.tags }}</p>
 
                     <!-- Join Event Button -->
